--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -41,6 +41,7 @@
   - { role: apigee-opdk-setup-license, tags: ['minimum', 'license', 'bootstrap'] }
   - { role: apigee-opdk-setup-component-install, component: 'apigee-setup', tags: ['minimum', 'setup', 'apigee-component-install', 'apigee-pre-req','common-install', 'common'] }
   - { role: apigee-opdk-setup-component-install, component: 'apigee-adminapi', tags: ['adminapi', 'apigee-component-install', 'apigee-pre-req','common-install', 'common'] }
+  - { role: apigee-opdk-setup-component-install, component: 'apigee-provision', tags: ['adminapi', 'apigee-component-install', 'apigee-pre-req','common-install', 'common'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['minimum', 'apigee-user','ownership', 'apigee-pre-req','common-install', 'common'] }
 
 - name: Configure & Install Cassandra & Zookeeper
